--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
 permissions:
   contents: read
 env:
-  GO_VERSION: 1.18
+  GO_VERSION: "1.21"
 
 jobs:
   go-mod:
@@ -27,8 +27,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
-        with:
-          version: v1.49.0
   test:
     runs-on: ubuntu-latest
     steps:
